Refactor torque computation function

--- a/Modeling/Kinematics/math/dynamics/dyn_symb.ipynb
+++ b/Modeling/Kinematics/math/dynamics/dyn_symb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,24 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(I1*Derivative(theta1(t), (t, 2)) + 0.03125*m2*(-2*sin(2*theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + cos(2*theta2(t))*Derivative(theta1(t), (t, 2)) + Derivative(theta1(t), (t, 2))) + 0.0625*m3*(cos(theta2(t) + theta3(t)) + cos(theta2(t)))*(-2*sin(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 2*sin(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) - 2*sin(theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + cos(theta2(t) + theta3(t))*Derivative(theta1(t), (t, 2)) + cos(theta2(t))*Derivative(theta1(t), (t, 2))) + 0.0625*m4*(cos(theta2(t) + theta3(t)) + cos(theta2(t)))*(-2*sin(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 2*sin(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) - 2*sin(theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + cos(theta2(t) + theta3(t))*Derivative(theta1(t), (t, 2)) + cos(theta2(t))*Derivative(theta1(t), (t, 2))) - 0.03125*m5*(0.8*sin(theta2(t) + theta3(t))*sin(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + 0.8*sin(theta2(t) + theta3(t))*sin(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) + 4.0*sin(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + 4.0*sin(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) + 4.0*sin(theta2(t) + theta3(t))*cos(theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + 4.0*sin(theta2(t) + theta3(t))*cos(theta2(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) - 0.08*sin(theta2(t) + theta3(t) + theta4(t))**2*Derivative(theta1(t), (t, 2)) + 0.8*sin(theta2(t) + theta3(t) + theta4(t))*sin(theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 0.8*sin(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t) + theta3(t))*Derivative(theta1(t), (t, 2)) - 0.16*sin(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 0.16*sin(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) - 0.16*sin(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta4(t), t) - 0.8*sin(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t))*Derivative(theta1(t), (t, 2)) + 4.0*sin(theta2(t))*cos(theta2(t) + theta3(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + 4.0*sin(theta2(t))*cos(theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 2.0*cos(theta2(t) + theta3(t))**2*Derivative(theta1(t), (t, 2)) - 0.8*cos(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 0.8*cos(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) - 0.8*cos(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t) + theta4(t))*Derivative(theta1(t), t)*Derivative(theta4(t), t) - 4.0*cos(theta2(t) + theta3(t))*cos(theta2(t))*Derivative(theta1(t), (t, 2)) - 0.8*cos(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - 0.8*cos(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t))*Derivative(theta1(t), t)*Derivative(theta3(t), t) - 0.8*cos(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t))*Derivative(theta1(t), t)*Derivative(theta4(t), t) - 2.0*cos(theta2(t))**2*Derivative(theta1(t), (t, 2))),\n",
-       " I2*Derivative(theta2(t), (t, 2)) + 0.03125*m2*sin(2*theta2(t))*Derivative(theta1(t), t)**2 + 2.4525*m2*cos(theta2(t)) + 0.0625*m2*Derivative(theta2(t), (t, 2)) + 2.4525*m3*(cos(theta2(t) + theta3(t)) + cos(theta2(t))) + 0.03125*m3*(2*sin(2*theta2(t) + theta3(t)) + sin(2*theta2(t) + 2*theta3(t)) + sin(2*theta2(t)))*Derivative(theta1(t), t)**2 - 0.0625*m3*(2*sin(theta3(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) + sin(theta3(t))*Derivative(theta3(t), t)**2 - 2*cos(theta3(t))*Derivative(theta2(t), (t, 2)) - cos(theta3(t))*Derivative(theta3(t), (t, 2)) - 2*Derivative(theta2(t), (t, 2)) - Derivative(theta3(t), (t, 2))) + 2.4525*m4*(cos(theta2(t) + theta3(t)) + cos(theta2(t))) + 0.03125*m4*(2*sin(2*theta2(t) + theta3(t)) + sin(2*theta2(t) + 2*theta3(t)) + sin(2*theta2(t)))*Derivative(theta1(t), t)**2 - 0.0625*m4*(2*sin(theta3(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) + sin(theta3(t))*Derivative(theta3(t), t)**2 - 2*cos(theta3(t))*Derivative(theta2(t), (t, 2)) - cos(theta3(t))*Derivative(theta3(t), (t, 2)) - 2*Derivative(theta2(t), (t, 2)) - Derivative(theta3(t), (t, 2))) + 9.81*m5*(0.05*sin(theta2(t) + theta3(t) + theta4(t)) + 0.25*cos(theta2(t) + theta3(t)) + 0.25*cos(theta2(t))) + 0.03125*m5*(0.4*sin(theta2(t) + theta3(t))*sin(theta2(t) + theta3(t) + theta4(t)) + 2.0*sin(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t)) + 2.0*sin(theta2(t) + theta3(t))*cos(theta2(t)) + 0.4*sin(theta2(t) + theta3(t) + theta4(t))*sin(theta2(t)) - 0.08*sin(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t) + theta3(t) + theta4(t)) + 2.0*sin(theta2(t))*cos(theta2(t) + theta3(t)) + 2.0*sin(theta2(t))*cos(theta2(t)) - 0.4*cos(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t) + theta4(t)) - 0.4*cos(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t)))*Derivative(theta1(t), t)**2 - 0.03125*m5*(-0.8*sin(theta3(t) + theta4(t))*Derivative(theta2(t), (t, 2)) - 0.4*sin(theta3(t) + theta4(t))*Derivative(theta3(t), (t, 2)) - 0.4*sin(theta3(t) + theta4(t))*Derivative(theta4(t), (t, 2)) + 4.0*sin(theta3(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) + 2.0*sin(theta3(t))*Derivative(theta3(t), t)**2 - 0.8*sin(theta4(t))*Derivative(theta2(t), (t, 2)) - 0.8*sin(theta4(t))*Derivative(theta3(t), (t, 2)) - 0.4*sin(theta4(t))*Derivative(theta4(t), (t, 2)) - 0.8*cos(theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) - 0.8*cos(theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) - 0.4*cos(theta3(t) + theta4(t))*Derivative(theta3(t), t)**2 - 0.8*cos(theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 0.4*cos(theta3(t) + theta4(t))*Derivative(theta4(t), t)**2 + 5.55111512312578e-17*cos(-2*theta2(t) + theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) + 5.55111512312578e-17*cos(-2*theta2(t) + theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 2.77555756156289e-17*cos(-2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 2.77555756156289e-17*cos(-2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) + 2.77555756156289e-17*cos(2*theta2(t) - 2*theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 2.77555756156289e-17*cos(2*theta2(t) - 2*theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 5.55111512312578e-17*cos(2*theta2(t) + theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) - 5.55111512312578e-17*cos(2*theta2(t) + theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 2.77555756156289e-17*cos(2*theta2(t) + 2*theta3(t) - theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 2.77555756156289e-17*cos(2*theta2(t) + 2*theta3(t) - theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 8.32667268468867e-17*cos(2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) - 8.32667268468867e-17*cos(2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 4.0*cos(theta3(t))*Derivative(theta2(t), (t, 2)) - 2.0*cos(theta3(t))*Derivative(theta3(t), (t, 2)) - 0.8*cos(theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) - 0.8*cos(theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 0.4*cos(theta4(t))*Derivative(theta4(t), t)**2 - 4.08*Derivative(theta2(t), (t, 2)) - 2.08*Derivative(theta3(t), (t, 2)) - 0.08*Derivative(theta4(t), (t, 2))),\n",
-       " 1.0*I3*Derivative(theta3(t), (t, 2)) + 0.03125*m3*sin(2*theta2(t) + theta3(t))*Derivative(theta1(t), t)**2 + 0.03125*m3*sin(2*theta2(t) + 2*theta3(t))*Derivative(theta1(t), t)**2 + 0.03125*m3*sin(theta3(t))*Derivative(theta1(t), t)**2 + 0.0625*m3*sin(theta3(t))*Derivative(theta2(t), t)**2 + 2.4525*m3*cos(theta2(t) + theta3(t)) + 0.0625*m3*cos(theta3(t))*Derivative(theta2(t), (t, 2)) + 0.0625*m3*Derivative(theta2(t), (t, 2)) + 0.0625*m3*Derivative(theta3(t), (t, 2)) + 0.03125*m4*sin(2*theta2(t) + theta3(t))*Derivative(theta1(t), t)**2 + 0.03125*m4*sin(2*theta2(t) + 2*theta3(t))*Derivative(theta1(t), t)**2 + 0.03125*m4*sin(theta3(t))*Derivative(theta1(t), t)**2 + 0.0625*m4*sin(theta3(t))*Derivative(theta2(t), t)**2 + 2.4525*m4*cos(theta2(t) + theta3(t)) + 0.0625*m4*cos(theta3(t))*Derivative(theta2(t), (t, 2)) + 0.0625*m4*Derivative(theta2(t), (t, 2)) + 0.0625*m4*Derivative(theta3(t), (t, 2)) - 0.0075*m5*sin(theta2(t) + theta3(t))*sin(theta2(t))*sin(theta3(t))*sin(theta4(t))**2*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta2(t) + theta3(t))*sin(theta4(t))**2*cos(theta2(t))*cos(theta3(t))*Derivative(theta1(t), t)**2 + 0.025*m5*sin(theta2(t) + theta3(t))*sin(theta4(t))*cos(theta2(t) + theta3(t))*Derivative(theta1(t), t)**2 + 0.06*m5*sin(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t))*Derivative(theta1(t), t)**2 + 0.0625*m5*sin(theta2(t) + theta3(t))*cos(theta2(t))*Derivative(theta1(t), t)**2 + 0.0125*m5*sin(theta3(t) + theta4(t))*Derivative(theta2(t), (t, 2)) + 0.4905*m5*sin(theta2(t) + theta3(t) + theta4(t)) + 0.005*m5*sin(theta2(t))**2*sin(theta4(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.025*m5*sin(theta2(t))**2*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.01*m5*sin(theta2(t))*sin(theta3(t))*sin(theta4(t))*cos(theta2(t) + theta3(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.05*m5*sin(theta2(t))*sin(theta3(t))*cos(theta2(t) + theta3(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta2(t))*sin(theta4(t))**2*cos(theta2(t))*Derivative(theta1(t), t)**2 + 0.005*m5*sin(theta3(t))**2*sin(theta4(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.025*m5*sin(theta3(t))**2*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta3(t))*sin(theta4(t))**2*cos(theta3(t))*Derivative(theta1(t), t)**2 + 0.0625*m5*sin(theta3(t))*Derivative(theta2(t), t)**2 - 0.0025*m5*sin(theta4(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.025*m5*sin(theta4(t))*Derivative(theta2(t), (t, 2)) + 0.025*m5*sin(theta4(t))*Derivative(theta3(t), (t, 2)) + 0.0125*m5*sin(theta4(t))*Derivative(theta4(t), (t, 2)) + 2.4525*m5*cos(theta2(t) + theta3(t)) - 0.0125*m5*cos(theta3(t) + theta4(t))*Derivative(theta2(t), t)**2 - 4.33680868994202e-19*m5*cos(-2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) - 4.33680868994202e-19*m5*cos(-2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 0.0125*m5*cos(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t))*Derivative(theta1(t), t)**2 - 4.33680868994202e-19*m5*cos(2*theta2(t) - 2*theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) - 4.33680868994202e-19*m5*cos(2*theta2(t) - 2*theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) - 4.33680868994202e-19*m5*cos(2*theta2(t) + 2*theta3(t) - theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) - 4.33680868994202e-19*m5*cos(2*theta2(t) + 2*theta3(t) - theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) + 1.30104260698261e-18*m5*cos(2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 1.30104260698261e-18*m5*cos(2*theta2(t) + 2*theta3(t) + theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) + 0.0625*m5*cos(theta3(t))*Derivative(theta2(t), (t, 2)) - 0.0125*m5*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.025*m5*cos(theta4(t))*Derivative(theta2(t), t)*Derivative(theta4(t), t) + 0.025*m5*cos(theta4(t))*Derivative(theta3(t), t)*Derivative(theta4(t), t) + 0.0125*m5*cos(theta4(t))*Derivative(theta4(t), t)**2 + 0.065*m5*Derivative(theta2(t), (t, 2)) + 0.065*m5*Derivative(theta3(t), (t, 2)) + 0.0025*m5*Derivative(theta4(t), (t, 2)),\n",
-       " 1.0*I4*Derivative(theta4(t), (t, 2)) + 0.0025*m5*sin(theta2(t) + theta3(t))*sin(theta2(t))*sin(theta3(t))*cos(theta4(t))**2*Derivative(theta1(t), t)**2 - 0.0025*m5*sin(theta2(t) + theta3(t))*sin(theta2(t))*sin(theta3(t))*Derivative(theta1(t), t)**2 - 0.0025*m5*sin(theta2(t) + theta3(t))*cos(theta2(t) + theta3(t))*cos(theta4(t))**2*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta2(t) + theta4(t))*sin(theta2(t))*sin(theta4(t))*cos(theta3(t))**2*Derivative(theta1(t), t)**2 + 0.0125*m5*sin(theta2(t) + theta4(t))*sin(theta2(t))*cos(theta3(t))**2*Derivative(theta1(t), t)**2 - 0.0125*m5*sin(theta2(t) + theta4(t))*sin(theta2(t))*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta3(t) + theta4(t))*sin(theta3(t))*sin(theta4(t))*cos(theta2(t))**2*Derivative(theta1(t), t)**2 + 0.0125*m5*sin(theta3(t) + theta4(t))*Derivative(theta2(t), (t, 2)) + 0.4905*m5*sin(theta2(t) + theta3(t) + theta4(t)) + 0.01*m5*sin(theta2(t))*sin(theta3(t))*sin(theta4(t))*cos(theta2(t))*cos(theta3(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.025*m5*sin(theta2(t))*sin(theta3(t))*cos(theta2(t))*cos(theta3(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.025*m5*sin(theta3(t))*sin(theta4(t))*cos(theta2(t))**2*cos(theta3(t))*Derivative(theta1(t), t)**2 - 0.0125*m5*sin(theta3(t))*sin(theta4(t))*cos(theta3(t))*Derivative(theta1(t), t)**2 - 0.005*m5*sin(theta4(t))*cos(theta2(t))**2*cos(theta3(t))**2*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta4(t))*cos(theta2(t))**2*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.0025*m5*sin(theta4(t))*cos(theta3(t))**2*cos(theta4(t))*Derivative(theta1(t), t)**2 - 0.0025*m5*sin(theta4(t))*cos(theta4(t))*Derivative(theta1(t), t)**2 + 0.0125*m5*sin(theta4(t))*Derivative(theta2(t), (t, 2)) + 0.0125*m5*sin(theta4(t))*Derivative(theta3(t), (t, 2)) - 0.0125*m5*cos(theta2(t) + theta4(t))*cos(theta2(t))*cos(theta3(t))**2*Derivative(theta1(t), t)**2 - 0.0125*m5*cos(theta3(t) + theta4(t))*Derivative(theta2(t), t)**2 - 0.0125*m5*cos(theta2(t) + theta3(t) + theta4(t))*cos(theta2(t))*Derivative(theta1(t), t)**2 - 0.0125*m5*cos(theta4(t))*Derivative(theta2(t), t)**2 - 0.025*m5*cos(theta4(t))*Derivative(theta2(t), t)*Derivative(theta3(t), t) - 0.0125*m5*cos(theta4(t))*Derivative(theta3(t), t)**2 + 0.0025*m5*Derivative(theta2(t), (t, 2)) + 0.0025*m5*Derivative(theta3(t), (t, 2)) + 0.0025*m5*Derivative(theta4(t), (t, 2)),\n",
-       " 1.0*I5*Derivative(theta5(t), (t, 2)))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Euler-Lagrange equations\n",
@@ -171,13 +156,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'm1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Numerical values for the simulation\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m m_values \u001b[38;5;241m=\u001b[39m {\u001b[43mm1\u001b[49m: \u001b[38;5;241m1.0\u001b[39m, m2: \u001b[38;5;241m1.0\u001b[39m, m3: \u001b[38;5;241m1.0\u001b[39m, m4: \u001b[38;5;241m1.0\u001b[39m, m5: \u001b[38;5;241m1.0\u001b[39m}\n\u001b[0;32m      3\u001b[0m I_values \u001b[38;5;241m=\u001b[39m {I1: \u001b[38;5;241m0.1\u001b[39m, I2: \u001b[38;5;241m0.1\u001b[39m, I3: \u001b[38;5;241m0.1\u001b[39m, I4: \u001b[38;5;241m0.1\u001b[39m, I5: \u001b[38;5;241m0.1\u001b[39m}\n\u001b[0;32m      4\u001b[0m angle_values \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, np\u001b[38;5;241m.\u001b[39mpi, \u001b[38;5;241m360\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'm1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Numerical values for the simulation\n",
-    "m_values = {m1: 1.0, m2: 1.0, m3: 1.0, m4: 1.0, m5: 2.0}\n",
+    "m_values = {m1: 1.0, m2: 1.0, m3: 1.0, m4: 1.0, m5: 1.0}\n",
     "I_values = {I1: 0.1, I2: 0.1, I3: 0.1, I4: 0.1, I5: 0.1}\n",
     "angle_values = np.linspace(0, np.pi, 360)\n",
     "torque1_vals = []\n",
@@ -189,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
