--- a/Modeling/Kinematics/math/dynamics/dynamics_motion.ipynb
+++ b/Modeling/Kinematics/math/dynamics/dynamics_motion.ipynb
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -963,21 +963,21 @@
      "text": [
       "Maximum Dynamic Torques for Each Joint:\n",
       "Max Tau_1 = 0\n",
-      "Max Tau_2 = 17.674852265106445\n",
-      "Max Tau_3 = 8.19224736316712\n",
-      "Max Tau_4 = 0.5885880622354426\n",
-      "Max Tau_5 = 0.9999977881804156\n"
+      "Max Tau_2 = 17.613564030873924\n",
+      "Max Tau_3 = 8.086750091715075\n",
+      "Max Tau_4 = 0.5637950042142448\n",
+      "Max Tau_5 = 0.9999415656117772\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Define the ranges for each joint in degrees and convert to radians\n",
-    "theta_1_range = np.radians(np.linspace(0, 360, 90))\n",
-    "theta_2_range = np.radians(np.linspace(-90, 90, 90))\n",
-    "theta_3_range = np.radians(np.linspace(-90, 90, 90))\n",
-    "theta_4_range = np.radians(np.linspace(-90, 90, 90))\n",
-    "theta_5_range = np.radians(np.linspace(0, 360, 90))\n",
+    "theta_1_range = np.radians(np.linspace(0, 360, 10))\n",
+    "theta_2_range = np.radians(np.linspace(-90, 90, 10))\n",
+    "theta_3_range = np.radians(np.linspace(-90, 90, 10))\n",
+    "theta_4_range = np.radians(np.linspace(-90, 90, 10))\n",
+    "theta_5_range = np.radians(np.linspace(0, 360, 10))\n",
     "\n",
     "# Define the ranges for velocities and accelerations\n",
     "dtheta_range = np.linspace(-1, 1, 3)  # Velocity range from -1 to 1 rad/s\n",
@@ -993,7 +993,7 @@
     "max_torques = [0] * len(torque_funcs)\n",
     "\n",
     "# Sampling method\n",
-    "num_samples = 1000000  # Number of samples to take\n",
+    "num_samples = 10000  # Number of samples to take\n",
     "\n",
     "# Generate random samples\n",
     "np.random.seed(0)  # For reproducibility\n",
