--- a/Modeling/Kinematics/math/dynamics/dynamics_motion.ipynb
+++ b/Modeling/Kinematics/math/dynamics/dynamics_motion.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
     "from sympy.utilities.lambdify import lambdify\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -948,75 +949,6 @@
     "\n",
     "# Print the maximum torques for each joint\n",
     "print(\"Maximum Torques for Each Joint:\")\n",
-    "for i in range(len(max_torques)):\n",
-    "    print(f\"Max Tau_{i+1} = {max_torques[i]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum Dynamic Torques for Each Joint:\n",
-      "Max Tau_1 = 0\n",
-      "Max Tau_2 = 17.613564030873924\n",
-      "Max Tau_3 = 8.086750091715075\n",
-      "Max Tau_4 = 0.5637950042142448\n",
-      "Max Tau_5 = 0.9999415656117772\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Define the ranges for each joint in degrees and convert to radians\n",
-    "theta_1_range = np.radians(np.linspace(0, 360, 10))\n",
-    "theta_2_range = np.radians(np.linspace(-90, 90, 10))\n",
-    "theta_3_range = np.radians(np.linspace(-90, 90, 10))\n",
-    "theta_4_range = np.radians(np.linspace(-90, 90, 10))\n",
-    "theta_5_range = np.radians(np.linspace(0, 360, 10))\n",
-    "\n",
-    "# Define the ranges for velocities and accelerations\n",
-    "dtheta_range = np.linspace(-1, 1, 3)  # Velocity range from -1 to 1 rad/s\n",
-    "ddtheta_range = np.linspace(-10, 10, 3)  # Acceleration range from -10 to 10 rad/s^2\n",
-    "\n",
-    "# Convert symbolic expressions to numerical functions\n",
-    "torque_funcs = [lambdify(\n",
-    "    (theta_1, theta_2, theta_3, theta_4, theta_5, dtheta_1, dtheta_2, dtheta_3, dtheta_4, dtheta_5, ddtheta_1, ddtheta_2, ddtheta_3, ddtheta_4, ddtheta_5),\n",
-    "    torque\n",
-    ") for torque in torques_gravity]\n",
-    "\n",
-    "# Initialize a list to store the maximum torques\n",
-    "max_torques = [0] * len(torque_funcs)\n",
-    "\n",
-    "# Sampling method\n",
-    "num_samples = 10000  # Number of samples to take\n",
-    "\n",
-    "# Generate random samples\n",
-    "np.random.seed(0)  # For reproducibility\n",
-    "samples = np.random.rand(num_samples, 15)\n",
-    "\n",
-    "# Map samples to the respective ranges\n",
-    "samples[:, 0] = samples[:, 0] * (theta_1_range.max() - theta_1_range.min()) + theta_1_range.min()\n",
-    "samples[:, 1] = samples[:, 1] * (theta_2_range.max() - theta_2_range.min()) + theta_2_range.min()\n",
-    "samples[:, 2] = samples[:, 2] * (theta_3_range.max() - theta_3_range.min()) + theta_3_range.min()\n",
-    "samples[:, 3] = samples[:, 3] * (theta_4_range.max() - theta_4_range.min()) + theta_4_range.min()\n",
-    "samples[:, 4] = samples[:, 4] * (theta_5_range.max() - theta_5_range.min()) + theta_5_range.min()\n",
-    "\n",
-    "samples[:, 5:10] = samples[:, 5:10] * (dtheta_range.max() - dtheta_range.min()) + dtheta_range.min()\n",
-    "samples[:, 10:15] = samples[:, 10:15] * (ddtheta_range.max() - ddtheta_range.min()) + ddtheta_range.min()\n",
-    "\n",
-    "# Iterate over the sampled combinations\n",
-    "for combination in samples:\n",
-    "    current_torques = [func(*combination) for func in torque_funcs]\n",
-    "    for i in range(len(max_torques)):\n",
-    "        max_torques[i] = max(max_torques[i], abs(current_torques[i]))\n",
-    "\n",
-    "# Print the maximum torques for each joint\n",
-    "print(\"Maximum Dynamic Torques for Each Joint:\")\n",
     "for i in range(len(max_torques)):\n",
     "    print(f\"Max Tau_{i+1} = {max_torques[i]}\")"
    ]
